修改问题单74-【12-06】登录页面，标题错误，改成 研发费用辅助管理系统

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- 隐藏浏览器图标 -->
     <link rel="icon" href="data:;base64,=">
-    <title>研究开发费用管理系统</title>
+    <title>研发费用辅助管理系统</title>
   </head>
   <body>
     <noscript>
